@@ -55,9 +55,9 @@
 
 #include <nuttx/arch.h>
 #include <nuttx/serial.h>
-#include <nuttx/usb.h>
-#include <nuttx/usbdev.h>
-#include <nuttx/usbdev_trace.h>
+#include <nuttx/usb/usb.h>
+#include <nuttx/usb/usbdev.h>
+#include <nuttx/usb/usbdev_trace.h>
 
 /****************************************************************************
  * Pre-processor Definitions
