@@ -74,10 +74,10 @@
 
 #include <nuttx/arch.h>
 #include <nuttx/fs.h>
-#include <nuttx/usb.h>
-#include <nuttx/usb_storage.h>
-#include <nuttx/usbdev.h>
-#include <nuttx/usbdev_trace.h>
+#include <nuttx/usb/usb.h>
+#include <nuttx/usb/usb_storage.h>
+#include <nuttx/usb/usbdev.h>
+#include <nuttx/usb/usbdev_trace.h>
 
 #include "usbdev_storage.h"
 
